Changed parsing of file as per T3-1000
git-svn-id: https://taverna.googlecode.com/svn/taverna/engine/net.sf.taverna.t2.taverna-commandline/branches/maintenance@16486 bf327186-88b3-11dd-a302-d386e5130c1c